Fix spacing when there are multiple Opto codes

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -384,3 +384,9 @@ mark.search-term {
     visibility: hidden;
   }
 }
+
+.opto-code-list {
+  li + li {
+    margin-top: 0.5rem;
+  }
+}
